examples/test/testpolicy4473.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4473
  namespace: namespace106
spec:
  podSelector:
    matchLabels:
      key49: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value11
          key48: value31
      podSelector:
        matchLabels:
          key16: value36
          key19: value46
